--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -380,69 +380,54 @@
 
 
 
-                                <table>
+                                <table width="100%">
                                     <tbody>
-                                        <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                                        <tr><td></td></tr>
                                         <tr>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:23px; text-align: left;padding: 10px;background-color: #DEDDDD;" colspan="6">
+                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:23px; text-align: left;padding: 10px;background-color: #DEDDDD;">
                                                 <t t-if="o.amount_total_to_text">
                                                     <span style="color:#454545;" t-field="o.amount_total_to_text"/>
                                                 </t>
                                             </td>
                                         </tr>
-                                        <tr>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:18px; text-align: center; padding: 10px;">
-                                                <center style="font-size:17.5px;font-weight: normal;" >SUBTOTAL de VENTA</center>
-                                            </td>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:18px; text-align: left; padding: 10px;">
-                                                <center styles="font-size:17.5px;font-weight: bold;" >VENTA</center>
-                                            </td>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:18px; text-align: center; padding: 10px;">
-                                                <center styles="font-size:17.5px;font-weight: bold;" >OPERACIONES GRATUITAS</center>
-                                            </td>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:18px; text-align: right; padding: 10px;">
-                                                <center styles="font-size:17.5px;font-weight: bold;" >I.G.V.</center>
-                                            </td>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:18px; text-align: right; padding: 10px;">
-                                                <center styles="font-size:17.5px;font-weight: bold;" >OTROS CARGOS</center>
-                                            </td>
-                                            <td style="font-family: Arial;border-width: 2.5px;border-top-style: solid;border-left-style: solid;border-right-style: solid; font-size:18px; text-align: center; padding: 10px;">
-                                                <center styles="font-size:17.5px;font-weight: bold;" >TOTAL</center>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                                <td style="font-family: Arial;border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center; padding: 10px;">
-                                                    <t t-if="o.amount_untaxed">
-                                                        <span style="color:#454545;" t-esc="o.currency_id.symbol +str(o.amount_untaxed)"/>
-                                                    </t>
+                                    </tbody>
+                                </table>
+                                <br/>
+                                <div align="right">
+                                    <table width="20%">>
+                                        <tbody>
+                                            <tr><td></td><td></td></tr>
+                                            <tr>
+                                                <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: bold; font-size:18px; text-align: left; min-width: 55px; min-height: 55px;font-family: Arial;padding: 5px;">
+                                                    <span>Subtotal</span>
                                                 </td>
-                            
-                                                <td style="font-family: Arial;border-width: 2.5px;border-left-style: ridge;border-bottom-style: ridge;border-right-style: ridge; font-weight: normal; font-size:19px; text-align: center; padding: 10px;">
-
-                                                </td>
-                            
-                                                <td style="font-family: Arial;border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center; padding: 10px;">
-                                                    
-                                                </td>
-                                                <td style="font-family: Arial;border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center; padding: 10px;">                                                    
-                                                    <t t-if="o.amount_tax">
-                                                        <SPAN style="color:#454545;" t-esc="o.currency_id.symbol +str(o.amount_tax)"/>
-                                                    </t>
-                                                </td>
-                                                <td style="font-family: Arial;border-width: 2.5px;border-left-style: ridge;border-right-style: ridge;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: left; padding: 10px;">
-                                                    <t t-if="o.amount_total">
-                                                        <span style="color:#454545;" t-esc="o.amount_total" />
-                                                    </t>
-                                                    
-                                                </td>
-                                                <td style="font-family: Arial;border-width: 2.5px;border-left-style: ridge;border-right-style: solid;border-bottom-style: ridge; font-weight: normal; font-size:19px; text-align: center; padding: 10px;">
-                                                    <t t-if="o.amount_total">
-                                                        <span style="color:#454545;" t-esc="o.currency_id.symbol +str(o.amount_total)" />
-                                                    </t>
+                                                <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: normal; font-size:18px; text-align: right; min-width: 55px; min-height: 55px;padding: 5px;">
+                                                    <span style="color:#454545;font-family: Arial;" t-esc="o.currency_id.symbol +str('%.2f'%o.amount_untaxed)"/>
                                                 </td>
                                             </tr>
+                                            <t t-set="count" t-value="o.get_distribucion_impuestos_txt()" />
+                                            <t t-foreach="count" t-as="linea_tax" >
+                                                <tr>
+                                                    <td style="border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:18px; text-align: left;font-family: Arial;padding: 7px;">
+                                                        <span t-esc="linea_tax[0]"/>
+                                                    </td>
+                                                    <td style="background-color: #D5D4D4;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:18px;font-family: Arial; text-align: right;padding: 7px;">
+                                                        <span t-esc="o.pricelist_id.currency_id.symbol"/>
+                                                        <span t-esc="linea_tax[1]"/>
+                                                    </td>
+                                                </tr>
+                                            </t>
+                                            <tr>
+                                                <td style="color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: bold; font-size:18px;font-family: Arial; text-align: left;padding: 7px;">
+                                                    <span>Total</span>
+                                                </td>
+                                                <td style="color:#FFFFFF; background-color: black;border-width: thin;border-left-style: ridge;border-right-style: ridge;border-top-style: ridge; font-weight: normal; font-size:18px;font-family: Arial; text-align: right;padding: 7px;">
+                                                    <span t-esc="o.currency_id.symbol +str('%.2f'%o.amount_total)"/>
+                                                </td>
+                                            </tr>        
                                         </tbody>
                                     </table>
+                                </div>
                         </t>
                    </div>
                 </div>
