--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -410,11 +410,11 @@
                                                     <t t-if="amount_by_group[5] == 1 and o.amount_untaxed == amount_by_group[2]">
                                                         <td name="td_amount_by_group_label_3">
                                                             <span t-esc="amount_by_group[0]"/>
-                                                            <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": o.pricelist_id.currency_id}'/></span>
+                                                            <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></span>
                                                         </td>
                                                         <td name="td_amount_by_group_3" class="text-right o_price_total">
                                                             <span t-esc="amount_by_group[1]"
-                                                                t-options='{"widget": "monetary", "display_currency": o.pricelist_id.currency_id}'/>
+                                                                t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                                         </td>
                                                     </t>
                                                     <t t-else ="">
@@ -423,7 +423,7 @@
                                                         </td>
                                                         <td name="td_amount_by_group" class="text-right o_price_total">
                                                             <span t-esc="amount_by_group[1]"
-                                                                t-options='{"widget": "monetary", "display_currency": o.pricelist_id.currency_id}'/>
+                                                                t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                                         </td>
                                                     </t>
                                                 </tr>
