--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -406,22 +406,22 @@
                                                 </td>
                                             </tr>
                                             <t t-foreach="o.amount_by_group" t-as="amount_by_group">
-                                                <tr style="">
+                                                <tr>
                                                     <t t-if="amount_by_group[5] == 1 and o.amount_untaxed == amount_by_group[2]">
-                                                        <td name="td_amount_by_group_label_3">
+                                                        <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: bold; font-size:18px; text-align: left; min-width: 55px; min-height: 55px;font-family: Arial;padding: 5px;" name="td_amount_by_group_label_3">
                                                             <span t-esc="amount_by_group[0]"/>
                                                             <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></span>
                                                         </td>
-                                                        <td name="td_amount_by_group_3" class="text-right o_price_total">
+                                                        <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: normal; font-size:18px; text-align: right; min-width: 55px; min-height: 55px;padding: 5px;" name="td_amount_by_group_3" class="text-right o_price_total">
                                                             <span t-esc="amount_by_group[1]"
                                                                 t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                                         </td>
                                                     </t>
                                                     <t t-else ="">
-                                                        <td name="td_amount_by_group_label">
+                                                        <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: bold; font-size:18px; text-align: left; min-width: 55px; min-height: 55px;font-family: Arial;padding: 5px;" name="td_amount_by_group_label">
                                                             <span t-esc="amount_by_group[0]"/>
                                                         </td>
-                                                        <td name="td_amount_by_group" class="text-right o_price_total">
+                                                        <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: normal; font-size:18px; text-align: right; min-width: 55px; min-height: 55px;padding: 5px;" name="td_amount_by_group" class="text-right o_price_total">
                                                             <span t-esc="amount_by_group[1]"
                                                                 t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                                         </td>
