--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -52,7 +52,7 @@
                         <div class="page">
                             <div class="row">
                                 <div class="col-7">
-                                    <table style="border:1px solid;border-radius: 30px!important;height:180px;">
+                                    <table style="border:1px solid;border-radius: 30px!important;">
                                         <tbody>
                                             <tr><td></td><td></td><td></td><td></td></tr>
                                             <tr>
@@ -178,7 +178,7 @@
                             <br/><br/>
                             <div class="row">
                                 <div class="col-12">
-                                    <table style="border-width: normal;border:1px solid;border-radius: 30px !important;">
+                                    <table width="100%" style="border-width: normal;border:1px solid;border-radius: 30px !important;">
                                         <tbody>
                                             <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
                                             <tr>
@@ -209,7 +209,7 @@
                                                         <span style="padding: 8px;font-family: Arial;" t-field="o.invoice_user_id.name"> </span>
                                                     </t>
                                                 </td>
-                                                <td width="220px">
+                                                <td width="15%">
 
                                                 </td>
                                             </tr>
@@ -375,9 +375,6 @@
                                         </t>
                                     </tbody>
                                 </table>
-                                <br/>
-
-
 
 
                                 <table width="100%">
@@ -394,7 +391,7 @@
                                 </table>
                                 <br/>
                                 <div align="right">
-                                    <table width="20%">
+                                    <table width="30%">
                                         <tbody>
                                             <tr><td></td><td></td></tr>
                                             <tr>
@@ -410,7 +407,7 @@
                                                     <t t-if="amount_by_group[5] == 1 and o.amount_untaxed == amount_by_group[2]">
                                                         <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: bold; font-size:18px; text-align: left; min-width: 55px; min-height: 55px;font-family: Arial;padding: 5px;" name="td_amount_by_group_label_3">
                                                             <span t-esc="amount_by_group[0]"/>
-                                                            <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></span>
+                                                            <span>&amp;nbsp;<span>en</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></span>
                                                         </td>
                                                         <td style="border-width: thin;border-left-style: solid;border-right-style: solid;border-top-style: solid; font-weight: normal; font-size:18px; text-align: right; min-width: 55px; min-height: 55px;padding: 5px;" name="td_amount_by_group_3" class="text-right o_price_total">
                                                             <span t-esc="amount_by_group[1]"
