--- a/account_move_report_formats/views/account_move_report_format.xml
+++ b/account_move_report_formats/views/account_move_report_format.xml
@@ -128,48 +128,47 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                </div>
-
-
-
-
-
-
-                                <div align="right">
-                                    <table width="45%" style="border:3px double black;">
-                                        <tbody>
-                                            <tr><td></td></tr>
-                                            <tr>
-                                                <td style="font-size:24px; text-align: center;font-weight: bold;padding: 10px;">
-                                                    <span>RUC N°</span>
-                                                    <t t-if="o.company_id.vat">
-                                                        <span t-field="o.company_id.vat"> </span>
-                                                    </t>
-                                                    <br/><br/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="font-size:24px; text-align: center;font-weight: bold;padding: 10px;">
-                                                    <t t-if="o.state == 'draft'">
-                                                        <span>BORRADOR</span>
-                                                    </t>
-                                                    <t t-if="o.state in ('posted','cancel')">
-                                                        <span>FACTURA ELECTRÓNICA</span>
-                                                    </t>
-                                                    <br/><br/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td style="font-size:22px; text-align: center;font-weight: bold;padding: 10px;">
-                                                    <t t-if="o.name">
-                                                        <span t-field="o.name"> </span>
-                                                    </t>
-                                                </td>
-                                            </tr>
-
-                                        </tbody>
+                                    <table align="right" width="35%" style="border:3px double black;">
+                                            <tbody>
+                                                <tr><td></td></tr>
+                                                <tr>
+                                                    <td style="font-size:24px; text-align: center;font-weight: bold;padding: 10px;">
+                                                        <span>RUC N°</span>
+                                                        <t t-if="o.company_id.vat">
+                                                            <span t-field="o.company_id.vat"> </span>
+                                                        </t>
+                                                        <br/><br/>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="font-size:24px; text-align: center;font-weight: bold;padding: 10px;">
+                                                        <t t-if="o.state == 'draft'">
+                                                            <span>BORRADOR</span>
+                                                        </t>
+                                                        <t t-if="o.state in ('posted','cancel')">
+                                                            <span>FACTURA ELECTRÓNICA</span>
+                                                        </t>
+                                                        <br/><br/>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td style="font-size:22px; text-align: center;font-weight: bold;padding: 10px;">
+                                                        <t t-if="o.name">
+                                                            <span t-field="o.name"> </span>
+                                                        </t>
+                                                    </td>
+                                                </tr>
+    
+                                            </tbody>
                                     </table>
                                 </div>
+
+
+
+
+
+
+                                
                             
 
 
